--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@fortawesome/free-solid-svg-icons": "^6.4.2",
     "@fortawesome/vue-fontawesome": "^3.0.3",
     "axios": "^1.5.1",
+    "lodash": "^4.17.21",
     "vue": "^3.3.4",
     "vue-router": "^4.2.5"
   },
