--- a/package.json
+++ b/package.json
@@ -25,11 +25,15 @@
     "@testing-library/jest-dom": "^6.1.3",
     "@testing-library/user-event": "^14.4.3",
     "@testing-library/vue": "^7.0.0",
+    "@types/jsdom": "^21.1.5",
+    "@types/node": "^20.9.2",
     "@vitejs/plugin-vue": "^4.3.4",
     "@vitest/coverage-v8": "^0.34.4",
     "@vitest/ui": "^0.34.6",
     "@vue/eslint-config-prettier": "^8.0.0",
+    "@vue/eslint-config-typescript": "^12.0.0",
     "@vue/test-utils": "^2.4.1",
+    "@vue/tsconfig": "^0.4.0",
     "autoprefixer": "^10.4.15",
     "eslint": "^8.49.0",
     "eslint-plugin-vitest-globals": "^1.4.0",
@@ -40,6 +44,7 @@
     "prettier": "^3.0.3",
     "prettier-plugin-tailwindcss": "^0.5.4",
     "tailwindcss": "^3.3.3",
+    "typescript": "^5.2.2",
     "vite": "^4.4.9",
     "vitest": "^0.34.4"
   }
