--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@testing-library/user-event": "^14.4.3",
     "@testing-library/vue": "^7.0.0",
     "@types/jsdom": "^21.1.5",
+    "@types/lodash": "^4.14.201",
     "@types/node": "^20.9.2",
     "@vitejs/plugin-vue": "^4.3.4",
     "@vitest/coverage-v8": "^0.34.4",
